update CEF to 96.0.16

--- a/examples/printing/page.html
+++ b/examples/printing/page.html
@@ -52,5 +52,6 @@
             <a href="#" onclick="doPrint(); return false;">Click here</a> to print to PDF, or <a href="#" onclick="window.print(); return false;">here</a> to print normally.
         </p>
         <p id="time"></p>
+        <h1>Hello World !</h1>
     </body>
 </html>
